--- a/tex/ch1.tex
+++ b/tex/ch1.tex
@@ -26,42 +26,48 @@ purpose.' But I'm anticipating having a good lunch.
 \section{Bioprocessing}\label{SS.bioproc}
 
 Before the advent of biotechnology, most therapeutics (medicines) were what are
-now termed \emph{small molecule} drugs. The pharmaceutical industry was
-concerned with the synthesis of these products via predominantly chemical
-processes, such as reaction, distillation and  crystallisation.  Small molecule
-drugs typically consist of tens or hundreds of atoms, such as paracetamol, which
-has a molar mass of approximately 151 g/mol, or aspirin (acetylsalicylic acid),
-which has a molar mass of approximately 180 g/mol.
+now termed \emph{small molecule} drugs.
+The pharmaceutical industry was concerned with the synthesis of these products
+via predominantly chemical processes, such as reaction, distillation and 
+crystallisation.
+Small molecule drugs typically consist of tens or hundreds of atoms, such as
+paracetamol, which has a molar mass of approximately 151 g/mol, or aspirin
+(acetylsalicylic acid), which has a molar mass of approximately 180 g/mol.
 
-With the advent of recombinant D.N.A technology, biochemists gained
-the ability to re-program the D.N.A. of simple biological microorganisms such as
-\textit{Escherichia coli} and, eventually, mammalian cells, such as those of the
-Chinese Hamster (\textit{Cricetulus griseus}).  The genetic structure of these
-cells could be modified to produce complex molecules, which had previously
-proved difficult or impossible to synthesise by any other means.  The
-biopharmaceutical industry is concerned with the synthesis of therapeutics via
-such biological pathways.  These products are known by various names, such as
+With the advent of recombinant D.N.A technology, biochemists gained the ability
+to re-program the D.N.A. of simple biological microorganisms such as
+\textit{Escherichia coli} and, eventually, mammalian cells, such as those of
+the Chinese Hamster (\textit{Cricetulus griseus}).
+The genetic structure of these cells could be modified to produce complex
+molecules, which had previously proved difficult or impossible to synthesise by
+any other means.
+The biopharmaceutical industry is concerned with the synthesis of therapeutics
+via such biological pathways.
+These products are known by various names, such as
 \emph{biopharmaceuticals}, \emph{protein therapeutics} or, colloquially, as
 \emph{biotech drugs}.
 
 The first protein therapeutic to be synthesised on a large scale using 
 biological pathways was insulin, which is a hormone used to regulate metabolism
-and is administered to individuals suffering from diabetes.  Human insulin has a
-molar mass of approximately 5808 g/mol.  It was not possible to commercially
-synthesise insulin chemically and it was initially produced by extracting the
-hormone from the pancreases of mammals such as cows or pigs.  In 1978, 
-scientists working at  the American company Genentech (now a subsidiary of the
-Swiss pharmaceutical company F. Hoffmann-La Roche AG) successfully modified 
-cells of \textit{E. coli} to produce insulin and this synthetic insulin was
-first brought to market in 1982.
+and is administered to individuals suffering from diabetes.
+Human insulin has a molar mass of approximately 5808 g/mol.
+It was not possible to commercially synthesise insulin chemically and it was
+initially produced by extracting the hormone from the pancreases of mammals
+such as cows or pigs.
+In 1978, scientists working at  the American company Genentech (now a
+subsidiary of the Swiss pharmaceutical company F. Hoffmann-La Roche AG)
+successfully modified cells of \textit{E. coli} to produce insulin and this
+synthetic insulin was first brought to market in 1982.
 
 The industry that has grown up around the production of biopharmaceuticals is 
 known as the \emph{biopharmaceutical industry}, or, colloquially, as the
-\emph{biotech} or \emph{biopharma} industry.  A report by strategy consultants
-McKinsey \& Company \citep{Otto:2014} estimates that the biopharmaceutical 
-market had global revenues of \$163 billion per annum and was worth 20\% of the
-overall pharmaceutical market.  \citet{Otto:2014} also note that large-scale
-biopharmaceutical manufacturing facilities typically cost in the region of
+\emph{biotech} or \emph{biopharma} industry.
+A report by strategy consultants McKinsey \& Company \citep{Otto:2014}
+estimates that the biopharmaceutical market had global revenues of
+\$163 billion per annum and was worth 20\% of the overall pharmaceutical
+market.
+\citet{Otto:2014} also note that large-scale biopharmaceutical manufacturing
+facilities typically cost in the region of 
 ``\$200 million to \$500 million or more'' to build.
 
 \section{Bioprocess Engineering}\label{SS.bioproceng}
@@ -69,9 +75,9 @@ biopharmaceutical manufacturing facilities typically cost in the region of
 \citet{Schaschke:2014} defines bioprocess engineering as ``A specialist branch
 of (chemical) engineering that involves the design and operation of processes
 used for the production of biological products such as foods, pharmaceuticals,
-and biopolymers.''  The design of a large-scale biopharmaceutical facility
-typically takes about two years and requires a multidisciplinary team of
-engineers and scientists.
+and biopolymers.''  
+The design of a large-scale biopharmaceutical facility typically takes about
+two years and requires a multidisciplinary team of engineers and scientists.
 
 \section{Upstream and Downstream}\label{SS.updown}
 
@@ -87,42 +93,54 @@ wherein the conditions can be altered to encourage the cells to produce the
 target protein.
 
 At the interface between upstream and downstream lies the \emph{harvest}
-section. In the harvest section, some initial separation is performed to begin
+section.
+In the harvest section, some initial separation is performed to begin
 to isolate the target protein from the contents of the batch (which at this
 point include cells, cell waste, growth media, antibiotics and myriad other
-contaminants).  At the end of the harvest section, all traces of the host cells
-should be removed and the batch is said to be \emph{cell-free}.  Different
-interpretations exist in the industry as to where the upstream-downstream split
-occurs, but it usually is defined as being at some point in the harvest section.
+contaminants).
+At the end of the harvest section, all traces of the host cells
+should be removed and the batch is said to be \emph{cell-free}.
+Different interpretations exist in the industry as to where the
+upstream-downstream split occurs, but it usually is defined as being at some
+point immediately before or after harvest.
 
 Downstream processing is concerned with taking the cell-free but otherwise 
 contaminated batch and purifying it through a series of orthogonal processes.
 Such processes can include filtration, ultrafiltration/diafiltration 
 (\emph{UF/DF}), chromatography, reaction, virus inactivation and formulation.
 At the end of downstream processing, a batch should consist of formulated bulk
-product, ready to be filled into its final packaging for delivery. The final 
-fill/finish steps often occur in a separate, sterile facility.
+product, ready to be filled into its final packaging for delivery.
+The final fill/finish steps often occur in a separate, sterile facility.
 
 \section{Buffers and Media}\label{SS.buffmed}
 
-Both upstream and downstream sections require large volumes of aqueous solutions
-to be prepared and stored.  Solutions used upstream are typically referred to as
-\emph{media} and those used downstream are typically referred to as
-\emph{buffers}.  Strictly speaking, media refers to the solutions of nutrients
-into which cells are expanded, but the term is usually used to encompass all
-other upstream solutions, such as acids and bases anti-foam used in the
-bioreactors.  Strictly speaking, a chemist would define a buffer as a solution
-which maintains its pH over a wide range of concentrations.  Most solutions used
-downstream do indeed meet this criteria, but the term \emph{buffers} is
-generally used as a catch-all for all solutions used in the downstream section.
+Both upstream and downstream sections of a facility require the preparation of
+large volumes of aqueous solutions.
+Solutions used upstream are typically referred to as \emph{media} and those
+used downstream are typically referred to as \emph{buffers}.
+Strictly speaking, media refers to the solutions of nutrients into which cells
+are expanded, but the term is usually used to encompass all other upstream
+solutions, such as acids, bases and anti-foam used in the bioreactors.
+Strictly speaking, a chemist would define a buffer as a solution which
+maintains its pH over a wide range of concentrations.
+Most solutions used downstream do indeed meet this criteria, but the term 
+\emph{buffers} is generally used as a catch-all for all solutions used in the
+downstream section of a facility.
 A typical process to produce a \emph{monoclonal antibody} (a common family of 
 protein therapeutics) can use tens or hundreds of litres of buffers and media 
-per litre volume in the production bioreactor.  Typical large-scale production
-bioreactor volumes for such processes are in the range 10,000--30,000 litres.
-Each batch may use in the region of 20--40 different buffers and media.
+per litre volume in the production bioreactor.
+Typical large-scale production bioreactor volumes for such processes are in the
+range \SIrange{10000}{30000}{\litre}.
+Each batch may use in the region of \numrange[range-phrase=--]{20}{40} different
+buffers and media.
 
 \section{Buffers and Media Preparation}\label{SS.buffmedprep}
-
+\begin{figure}
+    \centering
+    \includegraphics[angle=0,scale=1]{./figures/buffer_pfd.pdf}
+    \caption{Single buffer preparation process flow diagram}
+    \label{fig.pfd}
+\end{figure}
 One of the reasons for the catch-all definitions of \emph{buffers} and
 \emph{media} in the section above is to do with segregation.
 The upstream and downstream sections of the plant are segregated to prevent
@@ -134,89 +152,146 @@ for use upstream.
 There may also be a separate area for preparing sterile buffers for the final
 formulation, again to reduce the possibility of contamination and ensure
 sterility is maintained.
-In both media and buffer preparation, one vessel is used to prepare the solution
-and then it is typically sterile filtered into either a hold vessel or the
-destination vessel.
+In both media and buffer preparation, a preparation vessel is used to prepare
+the solution and then it is typically sterile filtered into a separate hold
+vessel.
+
+\hyperref[fig.pfd]{Figure \ref*{fig.pfd}} is a \emph{process flow diagram}; a
+simplified schematic that shows the main elements in the buffer preparation
+area, for the example of a single buffer.
+
+Note that we define a complete processing step in a piece of equipment as a
+\emph{procedure}, e.g.\ `buffer preparation of buffer $n$'.
+Each procedure consists of one or more \emph{operations}, e.g.\ `charge WFI
+to vessel'.
+These definitions will be used throughout this document. 
+
+A clean buffer preparation vessel is first charged with \emph{WFI} (water for
+injection) -- an extremely pure quality water.
+Solids are also charged to the vessel.
+After closing the solids charging port, the contents of the vessel are
+agitated to ensure complete solution of the solids.
+Heating or cooling may be applied via the vessel jacket.
+Sampling or testing may be performed, and adjustments made by adding more 
+solids of WFI.
+
+Once the buffer has passed any required quality checks, it is pressure
+transferred via a sterile filter to a sterile hold vessel.
+Prior to this point, the sterile filter, the hold vessel and all
+interconnecting pipework will have been sterilised, using clean steam, and then
+dried.  
+It is not possible to maintain sterility in the preparation vessel,
+since open solids additions are required, so the sterile filter acts as a
+barrier between the clean (but not sterile) preparation vessel and the
+sterilised hold vessel.
+Transfer of the buffer is usually performed by pressurising the preparation
+vessel using sterile, filtered nitrogen (pumps are not desirable since they
+contain complex interior surfaces that are hard to sterilise).
+If the preparation vessel is capable of serving more than one hold vessel, the
+buffer is directed via a \emph{valve ring} to its destination vessel.
+A valve ring is simply a loop of pipe.
+The valve ring has an open inlet port and several outlet ports.
+Each outlet port has a specialised valve, called a \emph{zero dead-leg} valve,
+which is located right at its junction with the loop.
+The effect of this setup is that there are no points in the loop where liquid
+can stagnate, which again aids in maintaining sterility.
+
+Once the preparation vessel has finished its transfer of the buffer, it is
+cleaned, ready for re-use.
+The vessel is cleaned, along with some of its pipework, in an automated manner
+known as \emph{CIP} (clean-in-place).
+A piece of equipment known as a \emph{CIP skid} is used to perform the CIP.
+A CIP Skid is connected to purified water and/or WFI supplies, as well as
+to sources of cleaning chemicals, such as acids, bases and detergents.
+The CIP skid contains a system of vessels, temperature control units and pumps
+which are capable of sending these various solutions to destination equipment
+in predefined cycles.  The waste generated during CIP is also returned to the
+CIP skid via scavenging pumps, which direct waste to other waste handling
+systems for further treatment or storage.
+
+The sterilised hold vessel, having received the buffer, holds it until it is
+required by the process.
+If the buffer is made ahead of time, it may be held for several hours before
+first use.
+A buffer may be used by one or more operations in one or more procedures in the
+production process, accordingly, it may be drawn discontinuously from the hold
+vessel during the course of a batch.
+Once the last use of the buffer has finished, the buffer hold vessel undergoes
+a CIP.
+The CIP leaves it clean, but not sterile.
+Just before it is to be used again, it undergoes \emph{SIP} (steam-in-place);
+clean steam is passed through the vessel and pipework until it reaches a
+predefined temperature for a predefined hold time, after which the vessel is
+allowed to cool down to room temperature.
+Once the SIP is complete, the hold vessel is ready to receive the next lot of
+buffer.
 
 \section{Design of Buffer Preparation Areas}\label{SS.buffprepdes}
 
-For a given product, a production process is defined at laboratory scale.  The
-definition of key parameters at laboratory scale can allow process engineers to
-generate a production-scale mass balance.  This mass balance provides, amongst
-other things, lists of all buffers and media required to make a batch.  Two
-complex optimisation problems now emerge; how do we design the buffer and media
-preparation areas?  For media, the problem is relatively easy to solve with some
-trial and error, since there are typically only about 10 media used per batch
-and they often differ vastly in scale; the initial bioreactor may be 20 litres
-in volume and the production bioreactor may be 20,000 litres in volume.  Because
-of this, the sizing of preparation vessels usually proceeds by picking a vessel
-capable of preparing the largest medium, defining a minimum fill volume and
-seeing what else can be prepared in it, then defining another vessel, and so on
-until sufficient vessels are defined.  Media hold vessels, if required, may be 
-similarly defined.  The design of media preparation is usually relatively
-insensitive to schedule.
+For a given product, a production process is defined at laboratory scale.
+The definition of key parameters at laboratory scale can allow process
+engineers to generate a production-scale mass balance.
+This mass balance provides, amongst other things, the volumes of all buffers
+and media required to make a batch.
+Two optimisation problems now emerge; how do we design the buffer and media
+preparation areas?
+For media, the problem is relatively easy to solve with some trial and error,
+since there are typically only about 10 media used per batch and they often
+differ vastly in scale; the initial bioreactor may be \SI{20}{\litre} in volume
+and the production bioreactor may be \SI{20,000}{\litre} in volume.
+Because of this, the sizing of preparation vessels usually proceeds by picking
+a vessel capable of preparing the largest medium, defining a minimum fill
+volume and seeing what else can be prepared in it, then defining another
+vessel, and so on until sufficient vessels are defined.
+Media hold vessels, if required, may be similarly defined.
+The design of media preparation is usually relatively insensitive to schedule.
 
 The problem of designing a buffer preparation area is more difficult to solve.
-There may be 20 or more different buffer compositions.  Often each buffer is
-used multiple times in the same operation or multiple times across multiple
-operations.  In operations such as chromatography, somewhere in the region of
-5--10 buffers may be needed in rapid succession.  They tend to be of similar 
-volumes, so an efficient solution will look to maximise the number of buffers
-prepared in a given preparation vessel.  Since they may be needed in rapid
-succession, this then involves a requirement for multiple hold vessels so
-some buffers can be made ahead of time.  Where buffers are required for multiple
-steps in an operation or across multiple operations, is it best to perform
-many preparations, or few?  Additionally, is it best to hold the buffer
-in many separate hold vessels, allowing them to be individually freed up more
-quickly, or is it better to consolidate and minimised the number of vessels?
-Defining success in the design of buffer preparation is also difficult.
-There exist trade-offs between efficiency and flexibility, capital and 
-operating costs, and many other factors such as installed area, installed 
-volume, operability, layout/adjacency, pipework complexity and cleanability.
+There may be 20 or more different buffer compositions.
+Often each buffer is used multiple times in the same procedure or multiple
+times across multiple procedures.
+In procedures such as chromatography, somewhere in the region of 
+\numrange[range-phrase=--]{5}{10} buffers may be needed in rapid succession.
+These chromatography buffers tend to be of similar volumes, so an efficient
+solution will look to maximise the number of buffers prepared in a given
+preparation vessel.
+If several similarly-sized buffers are to be prepared in the same preparation
+vessel, but all are required by the process concurrently, each will require a
+dedicated hold vessel and several of them will have to be prepared ahead of
+time, which puts pressure on the scheduling of their hold vessel activities.
+There is thus a trade-off between the numbers and volumes of vessels and
+the flexibility in scheduling buffers.
 
-Due to the high salt concentrations in some buffers, they can prove corrosive
-to the commonly used grades of stainless steel, such as 316L.  Such buffers
-may have to be prepared or held in vessels made from expensive alloys such as
-AL-6XN\textsuperscript{\textregistered}, which is about 3.5 times more
-expensive than 316L, or a steel from the
-Hastelloy\textsuperscript{\textregistered} family, which can be eight or more
-times more expensive than 316L.
-Ideally, the use of these alloys should be minimised.
+In practice, in the design of a buffer preparation area, there exists
+trade-offs between efficiency and flexibility, capital and operating costs,
+and many other factors such as installed area, installed volume, operability,
+layout/adjacency, pipework complexity and cleanability.
 
-Another factor is the use of disposable technology.  Buffer preparation, at
-scales of up to 3,000 litres, can be carried out in disposable sterile bags,
-rather than vessels.  These have a higher consumable cost but are faster to turn
-around between preparations and reduce the utilisation of cleaning equipment.
-Similarly, buffers can be held in disposable bags at volumes of up to 5,000
-litre.  Development of disposables technology is currently rapid and the
-available sizes and product ranges are increasing each year, so much so that 
-the state of the art has often moved on between the finish of the detailed
-design of a facility and the start of the first saleable production batch.
+Other factors that affect the design of the area are choices between fixed
+equipment (typically in stainless steel) or disposable equipment (disposable
+plastic preparation and hold bags are currently available in volumes up to
+\SI{5000}{\litre}), and material compatibility issues (high-nickel alloys,
+several times the cost of stainless steel, may be required for some
 
 \section{Problem Definition}\label{SS.probdef}
-\begin{figure}
-    \centering
-    \includegraphics[angle=0,scale=1]{./figures/buffer_pfd.pdf}
-    \caption{Buffer preparation schematic}
-    \label{fig.pfd}
-\end{figure}
-
-
-%TODO
-\textbf{TODO: Rewrite this section}
-
 The task of designing a buffer preparation area is complex.
 Current workflows are largely based on trial-and-error methods using process
-engineering scheduling software.  
-Typically, a conservatively large array of vessels is chosen and the schedule
-is run.  
-If there is an individual vessel for each task, the schedule will resolve
-easily, but the capital and space requirements will be onerous.
+engineering scheduling software.
+A schedule is developed, in the scheduling software too, for the main process
+and for the preparation and hold procedures.
+Typically, a conservatively large array of buffer vessels is chosen and the
+schedule scenario is run.
+If there is an individual vessel for each task, the scenario will resolve
+easily, but the capital and space requirements of such a design will be
+sub-optimal.
 Via trial-and-error, individual vessels may be removed or resized and
-the schedule re-run to see if it can be resolved.  
-After some iteration, it becomes difficult or impossible to remove or reduce
-the vessels any further and resolve the schedule.
+the schedule re-run.
+The above process is iterated until it becomes difficult or impossible to
+remove or reduce the vessels any further and obtain a feasible solution without
+scheduling clashes.
 At this point, iteration stops.
+It may appear that a `good' solution has been found at this point, but there
+is no clear methodology to ensure that the solution is optimal.
 % TODO: Pseudocode for this methodology 
 In the early feasibility or concept stages of a project, this process is
 cumbersome, the end points are poorly defined and any development of the
@@ -228,8 +303,8 @@ giving a false negative.
 The scheduling tools used for the process tend to be deterministic, rather than
 stochastic (although some sensitivity analysis is usually built in as an 
 add-on); this makes it difficult to have confidence that a working schedule can
-handle the real-world batch-to-batch variability inherent in a process that has
-living cells at its heart.S
+handle the real-world batch-to-batch variability inherent in a process that
+depends on the productivity of living cells.
 
 A more streamlined methodology for solving this optimisation problem is
 required and this dissertation is concerned with developing such a methodology
