--- a/tex/ch7.tex
+++ b/tex/ch7.tex
@@ -15,10 +15,27 @@
 
 \chapter{Conclusions}\label{C.conclusions}
 
-\section{Introduction}\label{S.Concl.intro}
+\begin{quote}
+Nothing in life is as important as you think it is when you are thinking about
+it.
 
-The significance of \ldots
+\hspace{2cm}--- Daniel Kahneman,
+\emph{Thinking, Fast and Slow}
+\end{quote}
 
-%TODO
-\textbf{TODO: why this was a good idea, how objectives were met, what was
-    learned}
+This dissertation seeks to define the problem of buffer vessel selection in
+bioprocessing facility design.
+It succeeded in modelling the problem mathematically, as a series of linear
+constraints on binary and real variables.
+The problem was then implemented such that it can be solved using one of a
+range of mixed-integer linear programming packages.
+Equipment time utilisation plots were designed to visualise the results.
+The models were trialled on both random and real-world data and found to be
+robust.
+The complexity of the models and time taken for solution were investigated.
+Scope for further work was outlined in terms of some additional features or
+constraints that could be added to the model.
+It is hoped that the work can contribute to the fields of engineering design
+and process optimisation and in particular that the code may be used on future
+design projects to aid rapid and accurate early-stage design of large-scale
+bioprocessing facilities.
