--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -36,28 +36,39 @@ I'll dig with it.
 This thesis was motivated by \ldots
 
 % Introduction
-We begin in \hyperref[C.intro]{Chapter \ref*{C.intro}} with a short overview of
-\ldots 
+We begin in \hyperref[C.intro]{Chapter \ref*{C.intro}} with an overview of the
+field of bioprocessing, followed by an outline of the design challenges that
+exist and an outline of the problem we are trying to solve; the buffer vessel
+selection problem.
 
 % Literature Review
-In \hyperref[C.litreview]{Chapter \ref*{C.litreview}} we \ldots 
+In \hyperref[C.litreview]{Chapter \ref*{C.litreview}}, the relevant literature
+is reviewed, starting with topics pertaining to bioprocess facility design and
+branching into the broader topics of process optimisation and linear
+programming.
 
 % Data
-\hyperref[C.data]{Chapter \ref*{C.data}} introduces \ldots 
+\hyperref[C.data]{Chapter \ref*{C.data}} outlines the form of the input data
+available and describes the input parameters to the mathematical model
 
 % Methodology
-In \hyperref[C.methodology]{Chapter \ref*{C.methodology}}, the \ldots 
+In \hyperref[C.methodology]{Chapter \ref*{C.methodology}}, several
+mixed-integer models are developed and the code used to implement them is
+discussed.
 
 % Results --- experimental, survey, etc
-We explore in \hyperref[C.results]{Chapter \ref*{C.results}} \ldots 
+\hyperref[C.results]{Chapter \ref*{C.results}} catalogues the results obtained.
+This includes outlining the form of the results, visualising the results and
+an investigation into the complexity of the problem and the time taken for
+solution as a function of the problem size.
 
 % Discussion
-\hyperref[C.discussion]{Chapter \ref*{C.discussion}} examines \ldots 
+\hyperref[C.discussion]{Chapter \ref*{C.discussion}} discusses the results in
+and the scope for further work.
 
 % Conclusions and future work
-Finally, in \hyperref[C.conclusions]{Chapter \ref*{C.conclusions}}, we \ldots{} 
-and indicate some possible avenues for further research following on from the
-ideas introduced in this thesis.
+\hyperref[C.conclusions]{Chapter \ref*{C.conclusions}} outlines the conclusions
+drawn from the exercise.
 
 \vspace{2em}
 
